// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the Card component Should allow using custom classes 1`] = `
<div
  className="container high-contrast-coloring margin-bottom radius primary-coloring"
/>
`;

exports[`Testing the Card component Should match the snapshot 1`] = `
<div
  className="container high-contrast-coloring margin-bottom radius "
>
  Card
</div>
`;

exports[`Testing the Card component Should render the correct content 1`] = `
<div
  className="container high-contrast-coloring margin-bottom radius "
>
  <div>
    Child
  </div>
</div>
`;

exports[`Testing the Card component Should render the description 1`] = `
<div
  className="container high-contrast-coloring margin-bottom radius "
>
  <div
    className="flex flex--column"
    data-testid="titleDescContainer"
  >
    <p
      className="s2"
    >
      description
    </p>
  </div>
</div>
`;

exports[`Testing the Card component Should render the title 1`] = `
<div
  className="container high-contrast-coloring margin-bottom radius "
>
  <div
    className="flex flex--column"
    data-testid="titleDescContainer"
  >
    <h6>
      title
    </h6>
  </div>
</div>
`;
